fix: discrepancy between stored file path and file location